fix code overflowing with new chrome rendering

--- a/themes/next2/source/css/_custom.styl
+++ b/themes/next2/source/css/_custom.styl
@@ -1,1 +1,3 @@
 // Custom styles.
+
+.code pre, .gutter pre { overflow: hidden; }
